<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="984dp"
        android:layout_height="1222dp"
        android:alpha="0.5"
        android:contentDescription="@string/backgound2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.018"
        app:srcCompat="@drawable/background"
        tools:ignore="ImageContrastCheck,MissingConstraints,VisualLintBounds" />

    <EditText
        android:id="@+id/editTextAddress"
        android:layout_width="322dp"
        android:layout_height="48dp"
        android:layout_margin="100dp"
        android:layout_marginBottom="80dp"
        android:autofillHints=""
        android:hint="@string/enter_address"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#352F2F"
        app:layout_constraintBottom_toTopOf="@+id/buttonShowLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/buttonShowLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/show_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextAddress" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"

        android:layout_width="255dp"
        android:layout_height="367dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonShowLocation"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonGoToSensor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_sensor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map"
        app:layout_constraintVertical_bias="0.409" />


</androidx.constraintlayout.widget.ConstraintLayout>